--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
                                 </a>
                             </li>
                         </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your <a href="firstpage.html">Website</a> 2023</div>
+                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your <a href="firstpage.html">Website</a> 2
+                            <a href="blogs/firstpage.html">0</a>2<a href="blogs/second.html">3</a></div>
                     </div>
                 </div>
             </div>
